<resources>
    <string name="app_name">Events</string>
    <string name="Log_In_Title">Fargo Events</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login_button">LOGIN</string>
    <string name="ValidationMessage"></string>
    <string name="Event_Name"></string>
    <string name="Event_Date"></string>
    <string name="Event_Image">Snapshot of the event</string>
    <string name="logout_action">Logout</string>
    <string name="speaker_image_hint">(Click here to show the speaker)</string>
</resources>
