<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:duplicateParentState="true"
    android:clickable="true"
    android:onClick="onEventClick"
    android:orientation="horizontal"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/eventImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:background="#FFFFFF"
            android:contentDescription="@string/Event_Image"
            android:cropToPadding="false"
            android:maxWidth="80dp"
            android:maxHeight="80dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.70"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Eventname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingTop="6dp"
            android:text="@string/Event_Name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/datetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Event_Date"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>
